# dumageview

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py
data/: CMakeLists.txt  dumageview.desktop  dumageview.xcf
plugins/: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/dumageview/: CMakeLists.txt  actionset.h  appcontroller.cpp  appcontroller.h  application.cpp  application.h  assert.h  classtools.h  cmdline.cpp  cmdline.h  conv_str.h  conv_str_fwd.h  conv_vec.h  conv_vec_fwd.h  dialogrunner.cpp  dialogrunner.h  enumutil.h  filedialogrunner.cpp  filedialogrunner.h  imagecontroller.cpp  imagecontroller.h  imageinfo.h  imagerenderer.cpp  imagerenderer.h  imagewidget.cpp  imagewidget.h  log.cpp  log.h  mainwindow.cpp  mainwindow.h  math.h  math_fwd.h  menumaker.cpp  menumaker.h  messageboxrunner.cpp  messageboxrunner.h  qtutil.h  renderview.h  renderview_inl.h  scopeguard.h
